--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,14 @@ android {
     compileSdkVersion 32
 
     defaultConfig {
-        applicationId 'org.traccar.manager'
+        applicationId 'app.datatrak.manager'
         minSdkVersion 19
         targetSdkVersion 32
         versionCode 33
         versionName '3.2'
         multiDexEnabled true
     }
-    namespace 'org.traccar.manager'
+    namespace 'app.datatrak.manager'
 
     flavorDimensions 'default'
     productFlavors {
